[tool.poetry]
name = "hass-wibeee"
version = "3.4.1"
description = "Wibeee (and Mirubee) energy monitor"
authors = ["Luis Miranda <cheery.key9586@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "wibeee", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "^2024.10.0"
xmltodict = "0.13.0"
lxml = ">=4.9.1,<6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
aioresponses = "^0.7.6"
pytest-asyncio = "^0.24.0"
pytest-aiohttp = "1.0.5"
pytest-homeassistant-custom-component = "0.13.176"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
