[tool.poetry]
name = "hass-wibeee"
version = "3.4.1"
description = "Wibeee (and Mirubee) energy monitor"
authors = ["Luis Miranda <cheery.key9586@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "wibeee", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = "^2025.1.0"
xmltodict = "0.14.*"
lxml = "5.3.*"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.*"
aioresponses = "0.7.*"
pytest-homeassistant-custom-component = "0.13.205"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
