[tool.poetry]
name = "hass-wibeee"
version = "4.3.1"
description = "Wibeee (and Mirubee) energy monitor"
authors = ["Luis Miranda <cheery.key9586@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "wibeee", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.14.2,<3.15"
homeassistant = ">=2026.2.0"
xmltodict = "0.14.*"
lxml = ">=5.3.1,<7"

[tool.poetry.group.dev.dependencies]
pytest = "9.*"
aioresponses = "0.7.*"
pytest-homeassistant-custom-component = "0.13.316"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
